generator client {
    provider      = "prisma-client-js"
    engineType    = "binary"
    binaryTargets = ["native"]
}

generator dbml {
    provider = "prisma-dbml-generator"
}

datasource db {
    provider = "mongodb"
    url      = env("DATABASE_URL")
}

model User {
    id            String         @id @default(auto()) @map("_id") @db.ObjectId
    email         String?        @unique
    password      String
    createdAt     DateTime       @default(now())
    updatedAt     DateTime       @updatedAt
    tags          Tag[]
    profileImages ProfileImage[]
    profileVideos ProfileVideo[]
}

model Profile {
    profileId      String  @id @default(auto()) @map("_id") @db.ObjectId
    profilePicture String?
    displayName    String?
}

model Tag {
    id     String @id @default(auto()) @map("_id") @db.ObjectId
    name   String
    userId String @db.ObjectId
    tager  User   @relation(references: [id], fields: [userId])
}

model ProfileImage {
    id     String @id @default(auto()) @map("_id") @db.ObjectId
    link   String
    userId String @db.ObjectId
    owner  User   @relation(references: [id], fields: [userId])
}

model ProfileVideo {
    id     String @id @default(auto()) @map("_id") @db.ObjectId
    link   String
    userId String @db.ObjectId
    owner  User   @relation(references: [id], fields: [userId])
}
